After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 791916 - meta_dnd_wayland_handle_end_modal cannot be used unconditionally
meta_dnd_wayland_handle_end_modal cannot be used unconditionally
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
3.27.x
Other FreeBSD
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2017-12-24 09:55 UTC by Ting-Wei Lan
Modified: 2017-12-25 06:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
build: Fix non-wayland builds (1.01 KB, patch)
2017-12-24 09:56 UTC, Ting-Wei Lan
committed Details | Review

Description Ting-Wei Lan 2017-12-24 09:55:14 UTC
In file src/compositor/compositor.c, function meta_end_modal_for_plugin, meta_dnd_wayland_handle_end_modal is used without '#ifdef HAVE_WAYLAND', causing build failure when wayland is disabled.
Comment 1 Ting-Wei Lan 2017-12-24 09:56:29 UTC
Created attachment 365922 [details] [review]
build: Fix non-wayland builds

meta_dnd_wayland_handle_end_modal is not available on non-wayland build.
Comment 2 Jonas Ådahl 2017-12-25 06:21:42 UTC
Review of attachment 365922 [details] [review]:

lgtm
Comment 3 Ting-Wei Lan 2017-12-25 06:35:37 UTC
Attachment 365922 [details] pushed as 6cc48d8 - build: Fix non-wayland builds